--- a/src/components/UI/formUI/Buttons/styles.module.scss
+++ b/src/components/UI/formUI/Buttons/styles.module.scss
@@ -2,5 +2,7 @@
   width: 180px;
   height: 40px;
   border-radius: 12px;
-  margin: 30px 0 20px;
+  margin: 26px 0 20px;
+	border-radius: 12px;
+	border: 0.5px solid rgb(92, 92, 92);
 }
