--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,16 +1,22 @@
 .header {
-  width: 100%;
-  height: 80px;
-  position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 0;
-  left: 0;
-  background: #1d59ce;
-  a{
-    color: aliceblue;
-    font-size: 32px;
-    font-weight: 500;
-  }
+	width: 100%;
+	height: 80px;
+	position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	background: #1d59ce;
+	a {
+		color: aliceblue;
+		font-size: 32px;
+		font-weight: 500;
+	}
+	.userLink {
+		position: fixed;
+		top: 15px;
+		right: 15px;
+		cursor: pointer;
+	}
 }
