--- a/src/components/UI/formUI/Buttons/styles.module.scss
+++ b/src/components/UI/formUI/Buttons/styles.module.scss
@@ -1,4 +1,4 @@
-.formBtn{
+.logInBtn{
   width: 180px;
   height: 40px;
   border-radius: 12px;
@@ -6,3 +6,4 @@
 	border-radius: 12px;
 	border: 0.5px solid rgb(92, 92, 92);
 }
+
