made the navigation a form for adding books

--- a/src/components/AddingBook/steps/styles.module.scss
+++ b/src/components/AddingBook/steps/styles.module.scss
@@ -10,26 +10,17 @@
   font-weight: 500;
   margin-bottom: 12px;
 }
+.titleDescription{
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  margin-bottom: 51px;
 
+}
 .descriptionBook{
   resize: none;
   padding: 12px;
 }
 
-.buttonContainer{
-  margin: auto;
-  display: flex;
-  justify-content: space-around;
-  width: 240px;
-}
 
-
-.titleBook {
-  margin: 4px 0 8px;
-  height: 20px;
-  width: 200px;
-  padding: 6px 8px;
-  border-radius: 12px;
-  border: 0.5px solid rgb(92, 92, 92);
-}
 
