--- a/src/components/UI/addingBookForm/Buttons/styles.module.scss
+++ b/src/components/UI/addingBookForm/Buttons/styles.module.scss
@@ -45,3 +45,10 @@
   color: aliceblue;
   background-color: #07248e;
 }
+
+.buttonContainer{
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+  width: 240px;
+}
