--- a/src/components/NewBook/NewBook.module.scss
+++ b/src/components/NewBook/NewBook.module.scss
@@ -4,11 +4,10 @@
 	align-items: center;
 	flex-direction: column;
 	width: 100%;
-	margin: 20px;
 	.title {
 		font-size: 32px;
 		font-weight: 500;
-		margin-bottom: 14px;
+		margin: 0 20px 14px;
 		text-align: center;
 	}
 	.description {
@@ -17,4 +16,8 @@
 		text-align: center;
 	}
 	
+}
+
+.visibleNewBookMessage{
+	display: none;
 }
