make bookshelf navigation, added add book component to all books and new book section

--- a/src/components/FormAddingBook/steps/styles.module.scss
+++ b/src/components/FormAddingBook/steps/styles.module.scss
@@ -23,4 +23,14 @@
 }
 
 
-
+.addCover{
+  opacity: 0;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  position: absolute;
+  top: 98px;
+  left: 184px;
+  background: #1d59ce;
+  cursor: pointer;
+}
