--- a/src/components/FormAddingBook/steps/styles.module.scss
+++ b/src/components/FormAddingBook/steps/styles.module.scss
@@ -14,8 +14,11 @@
   text-align: center;
   font-weight: 500;
   font-size: 16px;
-  margin-bottom: 51px;
+  margin-bottom: 11px;
 
+}
+.instruction{
+  margin-bottom: 40px;
 }
 .descriptionBook{
   resize: none;
