--- a/src/components/Book/Book.module.scss
+++ b/src/components/Book/Book.module.scss
@@ -1,6 +1,6 @@
 .card {
-  width: 180px;
-  height: 180px;
+  width: 200px;
+  height: 200px;
   position: relative;
   cursor: pointer;
   border-radius: 12px;
@@ -8,8 +8,8 @@
 
   .front, .back {
     position: absolute;
-    width: 180px;
-    height: 180px;
+    width: 200px;
+    height: 200px;
     left: 0;
     top: 0;
     transition: 1s;
@@ -17,13 +17,37 @@
     background-color: #fff;
     border: 1px solid #b8b8b8;
     border-radius: 12px;
+    padding: 10px;
 
     img {
-      width: 180px;
-      height: 180px;
+      max-width: 200px;
+      max-height: 200px;
       object-fit: cover;
       border-radius: 12px;
     }
+
+    .title {
+      text-align: center;
+      font-size: 20px;
+      font-weight: 500;
+      text-transform: capitalize;
+      margin: 10px;
+      word-break: break-word;
+    }
+
+    .description {
+      word-break: break-word;
+    }
+  }
+
+  .front {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .back {
+    overflow: auto;
   }
 
   &:hover .front {
