--- a/src/components/AddingBook/AddingBook.module.scss
+++ b/src/components/AddingBook/AddingBook.module.scss
@@ -1,24 +1,38 @@
 .wrapper {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	width: 100%;
-	height: 100%;
-	.title {
-		font-size: 32px;
-		font-weight: 500;
-		margin: 0 20px 14px;
-		text-align: center;
-	}
-	.description {
-		font-size: 24px;
-		margin-bottom: 18px;
-		text-align: center;
-	}
-	
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+  .title {
+    font-size: 32px;
+    font-weight: 500;
+    margin: 0 20px 14px;
+    text-align: center;
+  }
+
+  .description {
+    font-size: 24px;
+    margin-bottom: 18px;
+    text-align: center;
+  }
+
 }
 
-.visibleNewBookMessage{
-	display: none;
+.visibleNewBookMessage {
+  display: none;
+}
+
+.addBook {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 180px;
+  height: 40px;
+  border: none;
+  border-radius: 12px;
+  color: aliceblue;
+  background: #1d59ce;
 }
