--- a/src/components/UI/formUI/FormWrapper/styles.module.scss
+++ b/src/components/UI/formUI/FormWrapper/styles.module.scss
@@ -1,7 +1,6 @@
-.wrapper{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
+@import "src/styles/mixins/contentCenterFlex";
 
+.wrapper {
+  @include contentCenterFlex;
+  height: 100%;
 }
