--- a/src/components/FormAddingBook/steps/styles.module.scss
+++ b/src/components/FormAddingBook/steps/styles.module.scss
@@ -1,22 +1,22 @@
+@import "src/styles/variables/variables";
+
 .img {
   width: 80px;
   height: 80px;
   margin: 10px;
 }
 
-.text {
+.title {
   text-align: center;
-  font-size: 18px;
-  font-weight: 500;
+  font-size: $fz-title-form;
+  font-weight: $fw-title;
   margin-bottom: 12px;
 }
 
 .titleDescription {
   text-align: center;
-  font-weight: 500;
-  font-size: 16px;
+  font-weight: $fw-title;
   margin-bottom: 11px;
-
 }
 
 .instruction {
@@ -37,15 +37,14 @@
   color: red;
 }
 
-
 .addCover {
   position: absolute;
   width: 100px;
   height: 90px;
-  background: #1d59ce;
+  background: $primary-background;
   overflow: hidden;
-  cursor: pointer;
   opacity: 0;
+  cursor: pointer;
   &::-webkit-file-upload-button {
     cursor: pointer;
   }
