--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,23 +1,24 @@
+@import "../../styles/mixins/contentCenterFlex";
+@import "../../styles/mixins/headerAndFooterSize";
+@import "src/styles/variables/variables";
+
 .header {
-	width: 100%;
-	height: 80px;
-	position: fixed;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	top: 0;
-	left: 0;
-	background: #1d59ce;
-	z-index: 100;
-	a {
-		color: aliceblue;
-		font-size: 32px;
-		font-weight: 500;
-	}
-	.userLink {
-		position: fixed;
-		top: 15px;
-		right: 15px;
-		cursor: pointer;
-	}
+  @include headerAndFooterSize(100%,80px);
+  @include contentCenterFlex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: $primary-background;
+  z-index: 100;
+  a {
+    color: $primary-color;
+    font-size: 32px;
+    font-weight: $fw-title;
+  }
+  .userLink {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    cursor: pointer;
+  }
 }
