--- a/src/components/NavLibrary/NavLibrary.module.scss
+++ b/src/components/NavLibrary/NavLibrary.module.scss
@@ -1,32 +1,32 @@
+@import "src/styles/mixins/navLinkBookItem";
+@import "src/styles/variables/variables";
+
 .nav {
-	width: 250px;
-	height: 100%;
-	background: rgb(226, 226, 226);
-	padding: 24px;
-	.bookList{
-		display: flex;
-		flex-direction: column;
-		.bookItem {
-			padding: 10px 12px;
-			margin-bottom: 10px;
-			border-radius: 12px;
-			background: aliceblue;
-			color: #222222;
+  width: 250px;
+  height: 100%;
+  background: rgb(226, 226, 226);
+  padding: 24px;
 
-			&:hover {
-				cursor: pointer;
-				color: aliceblue;
-				background-color: #3c77ec;
-			}
+  .bookList {
+    display: flex;
+    flex-direction: column;
 
-		}
-		.activeLink{
-			padding: 10px 12px;
-			margin-bottom: 10px;
-			border-radius: 12px;
-			color: aliceblue;
-			background: #1d59ce;
-		}
-	}
+    .bookItem {
+      @include navLinkBookItem(10px 12px, 10px, 12px, aliceblue);
+      color: $secondary-color;
+
+      &:hover {
+        cursor: pointer;
+        color: $primary-color;
+        background-color: #3c77ec;
+      }
+    }
+
+    .activeLink {
+      @include navLinkBookItem(10px 12px, 10px, 12px, aliceblue);
+      background: $primary-background;
+      color: $primary-color;
+    }
+  }
 
 }
