--- a/src/pages/ErrorPage/styles.module.scss
+++ b/src/pages/ErrorPage/styles.module.scss
@@ -1,15 +1,17 @@
-.wrapper{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@import "src/styles/mixins/contentCenterFlex";
+
+.wrapper {
+  @include contentCenterFlex;
   height: 100%;
   flex-direction: column;
-  h3{
+
+  h3 {
     font-size: 72px;
     margin-bottom: 30px;
     font-weight: 700;
   }
-  p{
+
+  p {
     font-size: 20px;
     font-weight: 500;
   }
