--- a/src/pages/HomePage/styles.module.scss
+++ b/src/pages/HomePage/styles.module.scss
@@ -1,23 +1,24 @@
+@import "src/styles/variables/variables";
+@import "src/styles/mixins/contentCenterFlex";
+
 .wrapper {
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include contentCenterFlex;
   flex-direction: column;
+
   .title {
     font-size: 38px;
     margin-bottom: 20px;
     text-align: center;
   }
-	.start {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		width: 180px;
-		height: 40px;
-		border: none;
-		border-radius: 12px;
-		background: #1d59ce;
-	}
+
+  .start {
+    @include contentCenterFlex;
+    width: 180px;
+    height: 40px;
+    border: none;
+    border-radius: $primary-border-radius;
+    background: $primary-background;
+  }
 }
