--- a/src/pages/LibraryPages/styles.module.scss
+++ b/src/pages/LibraryPages/styles.module.scss
@@ -1,14 +1,15 @@
+@import "src/styles/variables/variables";
+@import "src/styles/mixins/contentCenterFlex";
+
 .wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include contentCenterFlex;
   flex-direction: column;
   width: 100%;
   height: 100%;
 
   .title {
     font-size: 32px;
-    font-weight: 500;
+    font-weight: $fw-title;
     margin: 0 20px 14px;
     text-align: center;
   }
@@ -26,13 +27,11 @@
 }
 
 .addBook {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include contentCenterFlex;
   width: 180px;
   height: 40px;
   border: none;
-  border-radius: 12px;
-  color: aliceblue;
-  background: #1d59ce;
+  border-radius: $primary-border-radius;
+  color: $primary-color;
+  background: $primary-background;
 }
