made favorite section, made send and download data for favorite section

--- a/src/components/Forms/styles.module.scss
+++ b/src/components/Forms/styles.module.scss
@@ -1,4 +1,5 @@
 @import "src/styles/variables/variables";
+@import "src/styles/mixins/flexColumn";
 
 .form{
   width: 340px;
@@ -6,9 +7,7 @@
   border: $primary-border;
   border-radius: $primary-border-radius;
   overflow: hidden;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+  @include flexColumn;
   padding: 60px 10px 0;
   box-sizing: border-box;
 	p{
