--- a/src/components/UI/wrappers/FormWrapper/styles.module.scss
+++ b/src/components/UI/wrappers/FormWrapper/styles.module.scss
@@ -1,4 +1,4 @@
-@import "src/styles/mixins/contentCenterFlex";
+@import "../../../../styles/mixins/contentCenterFlex";
 
 .wrapper {
   @include contentCenterFlex;
