--- a/src/pages/ErrorPage/styles.module.scss
+++ b/src/pages/ErrorPage/styles.module.scss
@@ -1,4 +1,5 @@
 @import "src/styles/mixins/contentCenterFlex";
+@import "src/styles/variables/variables";
 
 .wrapper {
   @include contentCenterFlex;
@@ -13,6 +14,6 @@
 
   p {
     font-size: 20px;
-    font-weight: 500;
+    font-weight: $fw-title;
   }
 }
