changed the principle of data loading, created actions, and added the logic of loading to the storage

--- a/src/pages/LibraryPages/styles.module.scss
+++ b/src/pages/LibraryPages/styles.module.scss
@@ -13,7 +13,13 @@
     margin: 0 20px 14px;
     text-align: center;
   }
-
+  .error{
+    font-size: 32px;
+    font-weight: $fw-title;
+    margin: 30px 0px;
+    text-align: center;
+    color: red;
+  }
 }
 .visibleNewBookMessage {
   display: none;
