--- a/src/pages/HomePage/styles.module.scss
+++ b/src/pages/HomePage/styles.module.scss
@@ -12,7 +12,14 @@
     margin-bottom: 20px;
     text-align: center;
   }
-
+.linkContainer{
+  width: 420px;
+  display: flex;
+  justify-content: space-around;
+  @media screen and (max-width: 440px){
+    flex-direction: column;
+    align-items: center;
+  }
   .start {
     @include contentCenterFlex;
     width: 180px;
@@ -21,4 +28,30 @@
     border-radius: $primary-border-radius;
     background: $primary-background;
   }
+  .choice{
+    display: block;
+    margin: 4px 10px;
+    font-size: 36px;
+
+  }
+  .linkToLibrary{
+    @include contentCenterFlex;
+    width: 180px;
+    height: 40px;
+    border: none;
+    color: $primary-color;
+    border-radius: $primary-border-radius;
+    background: #540adc;
+  }
 }
+
+  .allBooksLink {
+    width: 180px;
+    height: 32px;
+    border: 1px solid black;
+    margin: 60px 20px 40px;
+  }
+}
+
+
+
