--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,4 +4,7 @@
 .footer{
   @include headerAndFooterSize(100%,80px);
   background: $primary-background;
+  position: relative;
+  z-index: 100;
+  flex: 0 0 auto;
 }
