--- a/src/components/Forms/mainForms/styles.module.scss
+++ b/src/components/Forms/mainForms/styles.module.scss
@@ -1,5 +1,5 @@
-@import "src/styles/variables/variables";
-@import "src/styles/mixins/flexColumn";
+@import "../../../styles/variables/variables";
+@import "../../../styles/mixins/flexColumn";
 
 .form{
   width: 340px;
