--- a/src/styles/mixins/mainBookIcons.scss
+++ b/src/styles/mixins/mainBookIcons.scss
@@ -1,9 +1,8 @@
-@mixin booksIcons{
+@mixin mainBookIcons{
   height: 26px;
   width: 26px;
   position: absolute;
   top: 10px;
-  right: 10px;
   opacity: 0.4;
   &:hover {
     opacity: 1;
