--- a/src/components/Forms/mainForms/styles.module.scss
+++ b/src/components/Forms/mainForms/styles.module.scss
@@ -10,7 +10,7 @@
   @include flexColumn;
   padding: 60px 10px 0;
   box-sizing: border-box;
-  margin: 0 12px;
+  margin: 12px;
 	p{
 		a{
 			font-size: 18px;
