--- a/src/components/UI/wrappers/MessagePageWrapper/styles.module.scss
+++ b/src/components/UI/wrappers/MessagePageWrapper/styles.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 120px);
   display: grid;
   grid-template-columns: auto 1fr;
 }
