--- a/src/pages/ErrorPage/styles.module.scss
+++ b/src/pages/ErrorPage/styles.module.scss
@@ -3,8 +3,9 @@
 
 .wrapper {
   @include contentCenterFlex;
-  height: 100%;
+  height: 100vh;
   flex-direction: column;
+  text-align: center;
 
   h3 {
     font-size: 72px;
