--- a/src/pages/LibraryPage/styles.module.scss
+++ b/src/pages/LibraryPage/styles.module.scss
@@ -1,11 +1,16 @@
-.wrapper {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  h3 {
-    font-size: 46px;
-    text-align: center;
+
+.mainBlockLibraryPage{
+  margin-top: 80px;
+  flex: 1 1 auto;
+  .wrapper {
+    width: 100%;
+    height: calc(100vh - 120px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    h3 {
+      font-size: 38px;
+      text-align: center;
+    }
   }
 }
