--- a/src/pages/RegistrationPages/styles.module.scss
+++ b/src/pages/RegistrationPages/styles.module.scss
@@ -1,6 +1,7 @@
 @import 'src/styles/mixins/contentCenterFlex';
 
-.wrapper {
+.mainBlockRegistrationForm{
+  margin-top: 80px;
+  flex: 1 1 auto;
   @include contentCenterFlex;
-  height: 100%;
 }
