--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap");
 
 html,
 body {
@@ -8,7 +8,8 @@ body {
 }
 
 #root {
-  height: 100%;
+  overflow: hidden;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -25,7 +26,7 @@ textarea,
 button,
 span,
 label {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   line-height: 120%;
   font-weight: 400;
   text-decoration: none;
